--- a/Rs3.css
+++ b/Rs3.css
@@ -56,6 +56,11 @@
     text-decoration: underline;
     }
 
+    .hidden {
+      opacity: 0.3;       /* faded */
+      pointer-events: none;
+    }
+
     #page1 {
       display: block;
     }
