--- a/Rs3.css
+++ b/Rs3.css
@@ -1,5 +1,6 @@
 /* --- HAMBURGER ICON --- */
     .hamburger {
+      top: 5px;
       display: none;
       flex-direction: column;
       cursor: pointer;
